--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - Personal Bootstrap Template</title>
+  <title>Details - Personal Project</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -70,16 +70,17 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                <li><strong>Category</strong>: Data Analysis</li>
+                <!--<li><strong>Client</strong>: ASU Company</li>-->
+                <li><strong>Project date</strong>: 22 November, 2022</li>
+                <li><strong>Project URL</strong>: <a href="https://public.tableau.com/app/profile/rohith.govindaraju/viz/LayoffsAnalysis/Dashboard2">Tableaue</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>This is an example of portfolio detail</h2>
+              <h2>Analyssis of layoff's</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                The world is facing a recession and companies are laying off their employees. To understand the impact of this economic downturn, data analysis on layoff's using kaggle dataset and tableau can help us gain insights into the current job market.
+                By analyzing this data, we can get an idea of which industries are most affected by layoffs and how different roles within those industries are being impacted. This will help us make better decisions when it comes to hiring new employees or restructuring existing departments.
               </p>
             </div>
           </div>
