--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
                         <div class="row">
                             <div class="col-lg-6">
                                 <ul>
-                                    <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>6 April 2003</span></li>
-                                    <!--<li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>-->
-                                    <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 6281558981</span></li>
+                                    <!--<li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>6 April 2003</span></li>
+                                    <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+                                    <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 6281558981</span></li>-->
                                     <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Chennai, INDIA</span></li>
                                     <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                                 </ul>
