--- a/index.html
+++ b/index.html
@@ -606,14 +606,14 @@
                             <div class="email">
                                 <i class="bi bi-envelope"></i>
                                 <h4>Email:</h4>
-                                <p>manojrouthu26@gmail.com</p>
+                                <p>gr4361@srmist.edu.in</p>
                             </div>
 
-                            <div class="phone">
+<!--                             <div class="phone">
                                 <i class="bi bi-phone"></i>
                                 <h4>Call:</h4>
-                                <p>+91 8762661557</p>
-                            </div>
+                                <p>+91 6281558981</p>
+                            </div> -->
 
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3890.3122618504317!2d80.04205281475681!3d12.823087221589363!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a52f712b82a78d9%3A0xfdb944a3aee53831!2sSRM%20Institute%20of%20Science%20and%20Technology!5e0!3m2!1sen!2sin!4v1620310197467!5m2!1sen!2sin"
                                 width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
