--- a/index.html
+++ b/index.html
@@ -287,8 +287,8 @@
                             <h4>Rohith Govindraju</h4>
                             <p><em>Innovative and deadline-driven Data Analyst.</em></p>
                             <ul>
-                                <!--<li>Portland par 127,Orlando, FL</li>-->
-                                <li>+91 6281558981</li>
+                                <!--<li>Portland par 127,Orlando, FL</li>
+                                <li>+91 6281558981</li>-->
                                 <li>gr4361@srmist.edu.in</li>
                             </ul>
                         </div>
